<resources>
    <string name="app_name">TP3FickleFlightGrupo3</string>
    <string name="profile_background" />
    <string name="profile_picture" />
    <string name="book_now">Book Now</string>
    <string name="photos">Photos</string>
    <string name="overview">Overview</string>
    <string name="_349">$349</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Abierto\n</string>
    <string name="navigation_drawer_close">Cerrar\n</string>
    <string name="philippines">Philippines</string>
    <string name="Descripcion">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>
    <string name="boracay">Boracay</string>
    <string name="_5d4n">5D4N</string>
    <string name="msg_vuelo">Vuelo reservado con exito!</string>
    <string name="airline_logo">Airline Logo</string>
    <string name="duration_icon">Duration Icon</string>
    <string name="flight_icon">Flight Icon</string>
    <string name="class_icon">Class Icon</string>
    <string name="view_details">View Details</string>
    <string name="app_version">App version 0.0.1</string>
    <string name="flecha" />
    <string name="lapiz" />
    <string name="generales">Generales</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="limited_time_offer">Limited time offer!</string>
    <string name="limited_offer">LIMITED OFFER!</string>
    <string name="flight">Flight</string>
    <string name="trending_destinations">Trending Destinations</string>
    <string name="see_all">See All</string>
    <string name="price_paris">$1299</string>
    <string name="from">From</string>
    <string name="paris">Paris</string>
    <string name="heart" />
    <string name="flight_info">EZE ➔ LAX\n29 July, 2022</string>
    <string name="search_results">35 results found</string>
    <string name="options" />
</resources>