<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.tp3fickleflightgrupo3.ui.flightDetail.FlightDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/boracay"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start|top"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/flecha"
                android:src="@drawable/ic_profile_flecha" />


            <FrameLayout
                android:id="@+id/favIconContainer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end|top"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_background"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/favIcon"
                    android:layout_width="38dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/heart"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_heart_state" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="656dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="60dp"
                android:background="@drawable/rounded_background"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp">

                    <TextView
                        android:id="@+id/flight_destination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boracay"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/flight_code"
                        android:layout_width="44dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/flight_destination"
                        android:background="@drawable/rounded_corner_background"
                        android:padding="4dp"
                        android:text="@string/_5d4n"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/flight_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:paddingTop="4dp"
                        android:text="@string/_349"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/flight_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/flight_destination"
                        android:text="@string/philippines"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/flight_overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/overview"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/flight_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/Descripcion" />

                <TextView
                    android:id="@+id/flight_photos_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/photos"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/photoRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_photo" />

                <Button
                    android:id="@+id/bookNowButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/book_now"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</layout>